add rest of wallet endpoints, more utils and refactor
